--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
   pull_request:
   schedule:
     - cron: "0 0 * * *"
+env:
+  PSID: ${{secrets.PSID}}
+  SAPISID: ${{secrets.SAPISID}}
 
 jobs:
   main:
