--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -11,7 +11,7 @@
     <PackageIcon>favicon.png</PackageIcon>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>0.0.3-dev</Version>
+    <PackageId>YoutubeExplodeMusic</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
