--- a/NuGet.config
+++ b/NuGet.config
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="myget.org" value="https://www.myget.org/F/jint/api/v3/index.json" />
   </packageSources>
   <config>
     <add key="defaultPushSource" value="https://api.nuget.org/v3/index.json" />
