--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="CSharpier.MsBuild" Version="0.29.1" PrivateAssets="all" />
     <PackageReference Include="Deorcify" Version="1.0.2" PrivateAssets="all" />
 	<PackageReference Include="Jint" Version="4.0.0-preview-704" />
+    <PackageReference Include="Esprima" Version="3.0.5" />
     <PackageReference Include="Lazy.Fody" Version="1.11.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" Condition="'$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'net461'" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="all" />
@@ -33,9 +34,5 @@
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
     <Reference Include="System.Net.Http" />
   </ItemGroup>
-
-	<ItemGroup>
-		<InternalsVisibleTo Include="YoutubeExplode.Tests" />
-	</ItemGroup>
 
 </Project>
